adjusted gradlew build and run